pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lion
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:blue
      name: lion
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 2
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
